dnl Process this file with autoconf to produce a configure script.
AC_INIT(pkeyd.c)
AC_PREFIX_DEFAULT(.)
AC_CONFIG_HEADER(autoconf.h)

LDFLAGS="-L. -L../gdbm"
CPPFLAGS="-I. -I../gdbm"

dnl Checks for programs.
AC_PROG_CC


dnl Checks for libraries.
AC_CHECK_LIB(gdbm, gdbm_open,LIBS="-lgdbm  $LIBS",echo "ERROR:gdbm not found (required)";exit)
AC_CHECK_HEADER(gdbm.h,,echo "ERROR:gdbm not found (required)";exit)
AC_CHECK_LIB(nsl,gethostbyname)
AC_CHECK_LIB(socket,socket)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/file.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(socket)

AC_OUTPUT(Makefile)
